--- a/style.css
+++ b/style.css
@@ -7,151 +7,207 @@
     font-style: normal;
 }
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+:root {
+    --cor0: #c5ebd6;
+    --cor1: #83e1ad;
+    --cor2: #3ddc84;
+    --cor3: #2fa866;
+    --cor4: #1a5c37;
+    --cor5: #063d1e;
+
+    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-destaque: 'Roboto Condensed', sans-serif;
+    --fonte-idroid: 'idroid', 'sans-serif';
+}
 
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(89, 224, 123);    
+    background-color: var(--cor0);    
+}
+
+a.externo::after {
+    content: '\00a0\1f517';
+}
+
+header {
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
+    min-height: 150px;
+    text-align: center;
+    padding-top: 40px;
+}
+
+header > h1 {
+    font-family: var(--fonte-destaque);
+    font-size: 3em;
+    color: white;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.436);
+}
+
+header > p {
+    color: white;
+    font-family: var(--fonte-padrao);
+    font-size: 1.2em;
+    max-width: 600px;
+    margin: auto;
+    padding: 0px 10px 0px 10px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.436);
+}
+
+nav {
+    background-color: var(--cor5);
+    padding: 10px;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.196);
+}
+
+nav > a {
+    color: var(--cor1);
+    text-decoration: none;
+    padding: 10px;
+    font-weight: bold;
+    transition-duration: .5s; 
+    transition: 1s;
+}
+
+nav a:hover {
+    background-color: var(--cor3);
+    color: var(--cor5);
+    border-radius: 5px;
 }
 
 main {
     background-color: white;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
+    margin-bottom: 10px;
+    min-width: 300px;
     max-width: 1000px;
     width: 80%;
     padding: 20px;
-    box-shadow: 5px 5px 30px #2e562b6e;
+    box-shadow: 0px 0px 10px #2e562b6e;
+    border-radius: 0px 0px 10px 10px;
     
 }
 
-header {
-    background-image: linear-gradient(to bottom, rgb(89, 194, 89), rgb(64, 145, 68), rgb(35, 87, 46));
-    margin: -30px -10px 0px -10px;
-    padding-bottom: 10px;
-    
+main h1 {
+    font-family: 'idroid', Arial, Helvetica, sans-serif;
+    color:var(--cor4) ;
 }
 
-header > h1, aside {
-    color: white;
-    text-align: center;
-    padding-bottom: 30px;
+
+main h2 {
+    font-family: var(--fonte-idroid);
+    color: var(--cor4);
+    background-image: linear-gradient(to right, rgba(125, 197, 125, 0.493), transparent);
+    text-indent: 8px;
+    font-size: 1.3em;
 }
 
-header > h1 {
-    font-family: 'Roboto Condensed','Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 2.5em;
-    padding-top: 20px;
-}
-
-nav > a {
-    color: white;
-    text-decoration: none;
-    padding-right: 30px;
-    margin-left: 30px;
-}
-
-a:hover {
-    text-decoration: underline;
-    color: rgb(0, 152, 0);
-}
-
-p > a {
-    text-decoration: none;
-    color: green;
-}
-
-nav > a:visited {
-    color: rgb(255, 255, 255);
-}
-
-p {
-    text-indent: 30px;
-    height: 3em;
-    margin: 5px;
-    padding-bottom: 10px;
+main p {
+    margin: 15px 0px 15px 0px;
     text-align: justify;
+    text-indent: 30px;
+    line-height: 2em;
+    font-size: 1em;
 }
 
-main > h1 {
-    font-family: 'idroid', Arial, Helvetica, sans-serif;
-    color: rgb(1, 105, 1);
+main strong {
+    color: var(--cor4);
+    font-weight: bold;
+    padding: 2px 6px;
 }
 
-h2 {
-    font-family: 'idroid', Arial, Helvetica, sans-serif;
-    color: rgb(1, 105, 1);
-    background-image: linear-gradient(to right, rgba(125, 197, 125, 0.493), white 70%);
-    padding-left: 10px;
+main a{
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--cor5);
+    background-color: var(--cor1);
+    padding: 5px;
 }
 
+main a:hover {
+    text-decoration: underline;
+    color: var(--cor4);
+}
+
+main > img {
+    width: 100%;
+}
+
+main img.pequena {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
 
 img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-    padding-bottom: 20px;
+    width: 100%;
 }
 
-.video {
-    margin-left: -20px;
-    padding: 20px 120px;
-    margin-right: -20px;
-    margin-top: 20px;
-    background-color: rgb(1, 74, 1);
-}
 
-.janela {
-    display: block;
-    background-color: rgba(130, 223, 130, 0.577);
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+aside {
+    background-color: var(--cor1);
     padding: 10px;
-    margin-top: -19px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.279);
 }
 
-h3 {
-    background-color: green;
+aside > h3 {
+    background-color: var(--cor4);
     color: white;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
     padding: 10px;
-    border-top-right-radius: 20px;   
-    border-top-left-radius: 20px;
 }
 
-.fim {
-    margin-bottom: 20px;
-    margin-top: 30px;
+/* o h3 do aside está adaptado para fazer parte do arredondamento da caixa. isso foi possível colocando margens negativas e configurando-as */
+
+aside > ul {
+    list-style-type: '\2714\00A0\00A0'; /* não é compatível com todoos os navegadores. adiciona checkmark (\2714) e espaços (\00A0) */
+    list-style-position: inside; /* deixa a lista toda dentro da caixa */
+    columns: 2;
 }
 
-footer > p {
+
+footer {
     text-align: center;
-    background-color: rgb(1, 74, 1);
+    background-color: var(--cor5);
     color: white;
-    margin: 0px -9px -9px -9px;
     font-style: italic;
-    padding: 10px;
-    height: 20%;
+    padding: 5px;
+    font-size: 0.8em;
 }
 
-li {
+footer a {
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+footer a:hover {
     text-decoration: underline;
-    margin-bottom: 10px;
+    color: var(--cor1);
 }
 
-.lista1, .lista2 {
-    display: inline-block;
-    justify-content: space-between;
-    padding-bottom: 20px;
-    padding-right: 80px;
-    
+div.video {
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 59%;
+    position: relative;
 }
 
-ul {
-    width: 48%;
+div.video > iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
 }
 
-
-
-
-
+/* configurações de tamanho e alinhamento do vídeo. positions relative e absolute foram para ajustar o vídeo dentro da 'div' criada para ele. a position relative usa seu próprio canto para referenciar a posição, e a absolute usa o canto superior esquerdo de outros elementos*/
